# mofumofu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: pages.yml
docker/: release-smoke.Dockerfile
docs/: architecture-principles.md  cli-reference.md  data-schemas.md  implementation-plan.md  index.html  product-philosophy.md  release-notes-0.1.0.md  requirements.md  security-requirements.md  spec-index.md  tool-contracts.md
mofu/: cli.py  core.py  pi_wrapper.py
mofu/agent_runtime/: package-lock.json
tests/: test_cli.py
