[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mofumofu"
version = "0.1.0"
description = "Provider-neutral coding-agent control plane focused on spec/code consistency."
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"

[tool.setuptools]
packages = ["mofu"]

[tool.setuptools.package-data]
mofu = ["agent_runtime/**/*"]

[project.scripts]
mofu = "mofu.cli:main"
mofumofu = "mofu.cli:main"

[tool.mofumofu]
baseline = "python-stdlib"
