[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mofumofu"
version = "0.1.0"
description = "Provider-neutral coding-agent control plane focused on spec/code consistency."
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [{ name = "MaaS Creative" }]
keywords = ["ai", "coding-agent", "cli", "llm", "specification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://maas-creative.github.io/mofumofu/"
Repository = "https://github.com/maas-creative/mofumofu"
Issues = "https://github.com/maas-creative/mofumofu/issues"

[tool.setuptools]
packages = ["mofu"]

[tool.setuptools.package-data]
mofu = ["agent_runtime/**/*"]

[project.scripts]
mofu = "mofu.cli:main"
mofumofu = "mofu.cli:main"

[tool.mofumofu]
baseline = "python-stdlib"
